test/langtools/tools/javac/lambda_leftovers/UnderscoreCantBeFollowedByDimsTest.out
UnderscoreCantBeFollowedByDimsTest.java:9:19: compiler.err.underscore.as.identifier.in.method
UnderscoreCantBeFollowedByDimsTest.java:9:20: compiler.err.underscore.cant.be.followed.by.dimensions
2 errors
